provided mock data & more JS function

--- a/src/main/resources/static/Admin/dashboard.html
+++ b/src/main/resources/static/Admin/dashboard.html
@@ -132,11 +132,11 @@
                     <div class="calendar-weekdays">
                         <div class="calendar-weekday">SUN</div>
                         <div class="calendar-weekday">MON</div>
+                        <div class="calendar-weekday">TUE</div>
                         <div class="calendar-weekday">WED</div>
                         <div class="calendar-weekday">THU</div>
                         <div class="calendar-weekday">FRI</div>
                         <div class="calendar-weekday">SAT</div>
-                        <div class="calendar-weekday">SUN</div>
                     </div>
 
                     <div class="calendar-days" id="calendar-days">
@@ -158,40 +158,8 @@
                     </div>
 
                     <div class="notification-list" id="notification-list">
-                        <div class="notification-item warning" data-notification-id="new-request" id="new-request">
-                            <img src="image-resources/allpet-icon.svg" alt="New request">   
-                            <div class="notification-item-content">
-                                <h4>คำขอรับเลี้ยงใหม่</h4>
-                                <p>มีคำขอรับเลี้ยงใหม่มาจาก [ชื่อผู้ขอ] สำหรับน้อง[สุนัข/แมว] [ชื่อสัตว์]</p>
-                            </div>
-                        </div>
-
-                        <div class="notification-item read" data-notification-id="cancel-request" id="cancel-request">
-                            <img src="image-resources/cancel-icon.svg" alt="Request canceled">   
-                            <div class="notification-item-content">
-                                <h4>ผู้ใช้ยกเลิกคำขอ</h4>
-                                <p>[ชื่อผู้ขอ] ได้ยกเลิกคำขอของ[สุนัข/แมว] [ชื่อสัตว์] แล้ว</p>
-                            </div>
-                        </div>
-
-                        <div class="notification-item read" data-notification-id="appointment-noti" id="appointment-noti">
-                            <img src="image-resources/time-icon.svg" alt="Appointment notification">   
-                            <div class="notification-item-content">
-                                <h4>แจ้งเตือนวันนัดหมายใกล้มาถึง</h4>
-                                <p>นัดหมายส่งมอบน้อง[สุนัข/แมว] [ชื่อสัตว์] ให้ [ชื่อผู้ขอ] พรุ่งนี้ [เวลา]</p>
-                            </div>
-                        </div>
-
-                        <div class="notification-item warning" data-notification-id="appointment-ended" id="appointment-ended">
-                            <img src="image-resources/appointmentEnded-icon.svg" alt="Appointment ended">   
-                            <div class="notification-item-content">
-                                <h4>นัดหมายสิ้นสุดแล้ว</h4>
-                                <p>การนัดหมายกับ [ชื่อผู้ขอ] สำหรับน้อง[สุนัข/แมว] [ชื่อสัตว์] ได้สิ้นสุดแล้ว โปรดยืนยันสถานะการส่งมอบ</p>
-                            </div>
-                        </div>
-
+                        <!-- JavaScript จะสร้าง notification items ที่นี่ -->
                     </div>
-
                 </div>
             </div>
         </main>
