add js function for change page & fetch API in stat list card

--- a/src/main/resources/static/Admin/dashboard.html
+++ b/src/main/resources/static/Admin/dashboard.html
@@ -75,27 +75,27 @@
                     <!-- Stats List -->
                     <div class="stats-list">
                         <div class="stat-item">
-                            <div class="stat-number" id="stat-pending">3</div>
+                            <div class="stat-number" id="stat-pending"></div>
                             <div class="stat-label">รอพิจารณา</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number" id="stat-waiting">2</div>
+                            <div class="stat-number" id="stat-waiting"></div>
                             <div class="stat-label">รอส่งมอบ</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number" id="stat-delivered">2</div>
+                            <div class="stat-number" id="stat-delivered"></div>
                             <div class="stat-label">ส่งมอบแล้ว</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number" id="stat-open">11</div>
+                            <div class="stat-number" id="stat-open"></div>
                             <div class="stat-label">เปิดรับคำขอ</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number" id="stat-closed">5</div>
+                            <div class="stat-number" id="stat-closed"></div>
                             <div class="stat-label">ปิดรับคำขอ</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number" id="stat-user-id">12</div>
+                            <div class="stat-number" id="stat-user-id"></div>
                             <div class="stat-label">User ID</div>
                         </div>
                     </div>
