--- a/src/main/resources/static/User/petdetail.html
+++ b/src/main/resources/static/User/petdetail.html
@@ -80,7 +80,7 @@
         <div class="buttons">
             <a href="petlisting.html" style="text-decoration: none; color: inherit;">
             <button class="btn btn-secondary" id="backBtn">ย้อนกลับ</button></a>
-            <a href="userform.html" style="text-decoration: none; color: inherit;">
+            <!-- <a href="userform.html" style="text-decoration: none; color: inherit;"> -->
             <button class="btn btn-primary" id="adoptBtn">ขอรับเลี้ยง</button></a>
         </div>
     </div>
