modified navigation bar for user side

--- a/src/main/resources/static/User/contact.html
+++ b/src/main/resources/static/User/contact.html
@@ -16,15 +16,20 @@
                 <img src="../homepageResources/icon.png" alt="Logo">
             </div>
 
-            <ul class="nav-links">
+            <nav class="nav-button">
+                <ul class="nav-links">
                     <li><a href="../index.html">Homepage</a></li>
                     <li><a href="petlisting.html">Pet Listing</a></li>
+                    <li><a href="status.html">Adoption Status</a></li>
                     <li class="active"><a href="contact.html" class="active">About/Contact Us</a></li>
-                </ul> 
-                
-                <!-- Log out Button -->
-                <button class="logout-btn" id="logout-button">Log out</button>
+                </ul>
+
+                <ul class="nav-account">
+                    <li id="login-butt"><a href="../login.html">Log in</a></li>
+                    <li id="register-butt"><a href="../register.html">Create account</a></li>
+                </ul>
             </nav>
+        </nav>
 
             <div class="hamburger">
                 ☰
