--- a/src/main/resources/static/User/petlisting.html
+++ b/src/main/resources/static/User/petlisting.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="../homepageResources/icon.png" type="image/x-icon">
     <title>Pet Listing | Pet Adoption System</title>
 </head>
-
+    <!-- navigation bar -->
     <body>
         <header>
             <nav class="navbar">
@@ -17,15 +17,19 @@
                     <img src="../homepageResources/icon.png" alt="Logo">
                 </div>
 
-                <ul class="nav-links">
-                    <li><a href="../index.html">Homepage</a></li>
-                    <li class="active"><a href="petlisting.html" class="active">Pet Listing</a></li>
-                    <li><a href="contact.html">About/Contact Us</a></li>
-                </ul> 
+                <nav class="nav-button">
+                    <ul class="nav-links">
+                        <li><a href="../index.html">Homepage</a></li>
+                        <li class="active"><a href="petlisting.html" class="active">Pet Listing</a></li>
+                        <li><a href="status.html">Adoption Status</a></li>
+                        <li><a href="contact.html">About/Contact Us</a></li>
+                    </ul>
 
-                <!-- Log out Button -->
-                <button class="logout-btn" id="logout-button">Log out</button>
-            
+                    <ul class="nav-account">
+                        <li id="login-butt"><a href="../login.html">Log in</a></li>
+                        <li id="register-butt"><a href="../register.html">Create account</a></li>
+                    </ul>
+                </nav>
             </nav>
 
             <div class="hamburger">
