--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,20 +17,24 @@
                 <img src="homepageResources/icon.png" alt="Logo">
             </div>
 
-             <ul class="nav-links">
+            <nav class="nav-button">
+                <ul class="nav-links">
                     <li class="active"><a href="index.html" class="active">Homepage</a></li>
                     <li><a href="User/petlisting.html">Pet Listing</a></li>
+                    <li><a href="User/status.html">Adoption Status</a></li>
                     <li><a href="User/contact.html">About/Contact Us</a></li>
-                </ul> 
+                </ul>
 
-                <!-- Log out Button -->
-                <button class="logout-btn" id="logout-button">Log out</button>
+                <ul class="nav-account">
+                    <li id="login-butt"><a href="login.html">Log in</a></li>
+                    <li id="register-butt"><a href="register.html">Create account</a></li>
+                </ul>
             </nav>
-
-            <div class="hamburger">
-                ☰
-            </div>
-        </header>
+        </nav>
+        <div class="hamburger">
+            ☰
+        </div>
+    </header>
 
 
     <main>
