--- a/src/main/resources/static/Admin/add-edit-pet.html
+++ b/src/main/resources/static/Admin/add-edit-pet.html
@@ -13,9 +13,117 @@
         <div id="sidebar"></div>
         
         <!-- Main Content -->
-        <main></main>
-    </div>
+        <main>
+            <div class="header">
+            <h1>ALL PET <i class="fa-solid fa-chevron-right" style="font-size: 16px; margin: 0 10px; color: #333;"></i> <span style="font-weight: 400;">Add Pet</span></h1>
+        </div>
 
+        <div class="card">
+            <div class="card-header">
+                <h2 class="card-title">Photos</h2>
+            </div>
+            <div class="upload-area">
+                <div class="upload-icon">
+                    <i class="fa-solid fa-cloud-arrow-up"></i>
+                </div>
+                <p class="upload-text"><span class="upload-highlight">Click to upload</span> or drag and drop file PNG,JPG</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <h2 class="card-title">Basic Information</h2>
+                <button class="reset-btn">Reset</button>
+            </div>
+            
+            <div class="form-grid">
+                <div class="form-group">
+                    <label class="form-label">Pet Name<span class="required">*</span></label>
+                    <input type="text" class="form-control" placeholder="Enter Pet Name">
+                </div>
+
+                <div class="form-group">
+                    <label class="form-label">Type<span class="required">*</span></label>
+                    <div class="btn-group">
+                        <button class="selection-btn active"><i class="fa-solid fa-cat"></i> Cat</button>
+                        <button class="selection-btn"><i class="fa-solid fa-dog"></i> Dog</button>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="form-label">Breed<span class="required">*</span></label>
+                    <div class="date-input-wrapper">
+                        <select class="form-control" style="appearance: none; cursor: pointer;">
+                            <option>Mixed</option>
+                            <option>Persian</option>
+                            <option>Siam</option>
+                        </select>
+                         <i class="fa-solid fa-chevron-down calendar-icon"></i>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="form-label">Date of Birth<span class="required">*</span></label>
+                    <div class="date-input-wrapper">
+                        <input type="text" class="form-control" placeholder="mm/dd/yyyy">
+                        <i class="fa-regular fa-calendar calendar-icon"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group" style="max-width: 25%;">
+                <label class="form-label">Gender<span class="required">*</span></label>
+                <div class="btn-group">
+                    <button class="selection-btn"><i class="fa-solid fa-mars"></i> Male</button>
+                    <button class="selection-btn"><i class="fa-solid fa-venus"></i> Female</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <h2 class="card-title">Health Information</h2>
+                <button class="reset-btn">Reset</button>
+            </div>
+
+            <div class="health-grid form-grid"> <div class="form-group">
+                    <label class="form-label">Food Allergy</label>
+                    <input type="text" class="form-control" placeholder="Fish, Egg, etc">
+                </div>
+
+                <div class="form-group">
+                    <label class="form-label">Disease</label>
+                    <input type="text" class="form-control" placeholder="Rabies, Ringworm, etc">
+                </div>
+
+                <div class="form-group">
+                    <label class="form-label">Sterilization & Vaccination</label>
+                    <div class="checkbox-group">
+                        <label class="custom-checkbox">
+                            <input type="checkbox"> Sterilized
+                        </label>
+                        <label class="custom-checkbox">
+                            <input type="checkbox"> Vaccinated
+                        </label>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="form-label">Weight</label>
+                    <div class="weight-input-wrapper">
+                        <input type="number" class="form-control" style="width: 70px;">
+                        <span>kg</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="action-buttons">
+            <button class="btn btn-cancel">Cancel</button>
+            <button class="btn btn-save">Save</button>
+        </div>
+        </main>
+    </div>
 
     <script src="sidebar.js"></script>
 </body>
