add link in bottom

--- a/src/main/resources/static/Admin/allpet.html
+++ b/src/main/resources/static/Admin/allpet.html
@@ -119,8 +119,14 @@
                             <td>Persian</td>
                             <td><span class="status-tag pending">Pending</span></td>
                             <td class="actions-cell">
-                                <button class="action-button view-request-btn pending-btn">View Request</button>
-                                <button class="action-button edit-btn">Edit</button>
+                                <!-- ปุ่ม link ไปหน้า requests.html -->
+                                <a href="requests.html" class="link-button-container">
+                                    <button class="action-button view-request-btn pending-btn">View Request</button>
+                                </a>
+                                <!-- ปุ่ม link ไปหน้า animal_form.html -->
+                                <a href="animal_form.html" class="link-button-container"></a>
+                                    <button class="action-button edit-btn">Edit</button>
+                                </a>
                                 <button class="action-button delete-btn">Delete</button>
                             </td>
                         </tr>
