--- a/src/main/resources/static/Admin/sidebar.html
+++ b/src/main/resources/static/Admin/sidebar.html
@@ -20,19 +20,25 @@
 
             <nav class="nav-menu">
                 <div class="nav-item active" id="nav-dashboard">
-                    <img src="image-resources/dashboard-icon.svg" alt="Dashboard">
-                    <img class="icon-active" src="image-resources/dashboard-icon-gradient.svg" alt="Dashboard">
-                    <span>Dashboard</span>
+                        <div class="mini-nav-item">
+                        <img src="image-resources/dashboard-icon.svg" alt="Dashboard">
+                        <img class="icon-active" src="image-resources/dashboard-icon-gradient.svg" alt="Dashboard">
+                        <span>Dashboard</span>
+                    </div>
                 </div>
                 <div class="nav-item" id="nav-all-pet">
-                    <img src="image-resources/allpet-icon.svg" alt="All pet">
-                    <img class="icon-active" src="image-resources/allpet-icon-gradient.svg" alt="All pet">
-                   <span>All Pet</span>
+                    <div class="mini-nav-item">
+                        <img src="image-resources/allpet-icon.svg" alt="All pet">
+                        <img class="icon-active" src="image-resources/allpet-icon-gradient.svg" alt="All pet">
+                        <span>All Pet</span>
+                    </div>
                 </div>
                 <div class="nav-item" id="nav-schedule">
-                    <img src="image-resources/schedule-icon.svg" alt="Schedule">
-                    <img class="icon-active" src="image-resources/schedule-icon-gradient.svg" alt="Schedule">
-                    <span>Schedule</span>
+                    <div class="mini-nav-item">
+                        <img src="image-resources/schedule-icon.svg" alt="Schedule">
+                        <img class="icon-active" src="image-resources/schedule-icon-gradient.svg" alt="Schedule">
+                        <span>Schedule</span>
+                    </div>
                 </div>
             </nav>
 
