--- a/src/main/resources/static/Admin/sidebar.html
+++ b/src/main/resources/static/Admin/sidebar.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="th-en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="sidebar.css">
+    <title>หัวข้ออะไรใส่ด้วย</title>
 </head>
 
 <body>
+    <div class="container">
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="logo">
@@ -19,27 +22,43 @@
             </div>
 
             <nav class="nav-menu">
-                <div class="nav-item active" id="nav-dashboard">
+                <a href="dashboard.html" class="nav-item" id="nav-dashboard">
                     <img src="image-resources/dashboard-icon.svg" alt="Dashboard">
                     <img class="icon-active" src="image-resources/dashboard-icon-gradient.svg" alt="Dashboard">
                     <span>Dashboard</span>
-                </div>
-                <div class="nav-item" id="nav-all-pet">
+                </a>
+
+                <a href="allpet.html" class="nav-item active" id="nav-all-pet">
                     <img src="image-resources/allpet-icon.svg" alt="All pet">
                     <img class="icon-active" src="image-resources/allpet-icon-gradient.svg" alt="All pet">
-                   <span>All Pet</span>
-                </div>
-                <div class="nav-item" id="nav-schedule">
+                    <span>All Pet</span>
+                </a>
+
+                <a href="schedule.html" class="nav-item" id="nav-schedule">
                     <img src="image-resources/schedule-icon.svg" alt="Schedule">
                     <img class="icon-active" src="image-resources/schedule-icon-gradient.svg" alt="Schedule">
                     <span>Schedule</span>
-                </div>
+                </a>
             </nav>
 
-            <div class="nav-item logout" id="nav-logout">
+            <!-- logout -->
+            <a href="#" class="nav-item logout" id="nav-logout">
                 <img src="image-resources/logout-icon.svg" alt="Log out">
                 <span>Log out</span>
-            </div>
+            </a>
         </aside>
+
+        <main class="main-content">
+            <div class="header-controls">
+                <h1 class="dashboard-header">หัวข้อครับ</h1>
+
+                <!-- พิมพ์เนื้อหาที่นี้ ต่อจากนี้เลยจ้า-->
+
+
+                
+            </div>
+        </main>
+    </div>
+</body>
 
 </html>
