--- a/src/main/resources/static/Admin/add-edit-pet.html
+++ b/src/main/resources/static/Admin/add-edit-pet.html
@@ -47,7 +47,7 @@
                         <div class="error-message"></div>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group-mini">
                         <label class="form-label">Type<span class="required">*</span></label>
                         <div class="btn-group" id="typeGroup">
                             <button class="selection-btn active" data-value="Cat"><span class="solar--cat-bold"></span> Cat</button>
@@ -81,15 +81,16 @@
                         </div>
                         <div class="error-message"></div>
                     </div>
+                    <div class="form-group-mini" style="max-width: 250px;"> <label class="form-label">Gender<span class="required">*</span></label>
+                        <div class="btn-group" id="genderGroup">
+                            <button class="selection-btn" data-value="Male"><span class="tabler--gender-male"></span> Male</button>
+                            <button class="selection-btn" data-value="Female"><span class="tabler--gender-female"></span> Female</button>
+                        </div>
+                        <div class="error-message"></div>
+                    </div>
                 </div>
 
-                <div class="form-group" style="max-width: 250px;"> <label class="form-label">Gender<span class="required">*</span></label>
-                    <div class="btn-group" id="genderGroup">
-                        <button class="selection-btn" data-value="Male"><span class="tabler--gender-male"></span> Male</button>
-                        <button class="selection-btn" data-value="Female"><span class="tabler--gender-female"></span> Female</button>
-                    </div>
-                    <div class="error-message"></div>
-                </div>
+                
             </div>
 
             <div class="card">
@@ -109,7 +110,7 @@
                         <input type="text" class="form-control" id="disease" placeholder="Rabies, Ringworm, etc">
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group-mini">
                         <label class="form-label">Sterilization & Vaccination</label>
                         <div class="checkbox-group">
                             <label class="custom-checkbox">
@@ -121,7 +122,7 @@
                         </div>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group-mini">
                         <label class="form-label">Weight</label>
                         <div class="weight-input-wrapper">
                             <input type="number" class="form-control" id="petWeight" style="width: 70px;">
