--- a/src/main/resources/static/Admin/requests.html
+++ b/src/main/resources/static/Admin/requests.html
@@ -15,8 +15,8 @@
         <!-- Container -->
         <div class="container">
         
-        <!-- Main Content -->
-        <div class="main-content">
+        <!-- Main -->
+        <main>
             <div class="breadcrumb">
                 ALL PET > <span>รายการคำขอรับเลี้ยง</span>
             </div>
@@ -132,7 +132,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </main>
     </div>
 
     <script src="sidebar.js"></script>
