--- a/src/main/resources/static/Admin/petdetail.html
+++ b/src/main/resources/static/Admin/petdetail.html
@@ -16,7 +16,7 @@
         
 
         <!-- Main Content -->
-        <main class="main-content">
+        <main>
             <!-- Breadcrumb -->
             <div class="breadcrumb">
                 <a href="#">ALL PET</a>
