hide input outline

--- a/src/main/resources/static/Admin/requests.html
+++ b/src/main/resources/static/Admin/requests.html
@@ -49,7 +49,7 @@
                     <div class="form-group">
                         <label>อีเมล</label>
                         <input type="email" value="xxxxx@gmail.com" readonly>
-                    </div>
+                    </div><br>
 
                     <div class="form-row">
                         <div class="form-group">
@@ -65,16 +65,12 @@
                     <div class="form-group">
                         <label>ประเภทที่อยู่อาศัย</label>
                         <input type="text" value="ทาวเฮาส์" readonly>
-                    </div>
+                    </div><br>
 
                     <div class="form-group">
                         <label>คุณเคยเลี้ยงสัตว์หรือจัดองการ์ดแลรับไป? กรุณา</label>
-                        <div class="checkbox-label">
-                            <input type="checkbox" disabled>
-                            <span>ได้รับอนุญาตของเจ้าของบ้านให้เลี้ยงสุนัข</span>
-                        </div>
                         <textarea readonly>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</textarea>
-                    </div>
+                    </div><br>
 
                     <div class="form-group">
                         <label>ทำไมคุณถึงอยากรับสัตว์เลี้ยงตัวนี้ไว้?</label>
