--- a/src/main/resources/static/Admin/requests.html
+++ b/src/main/resources/static/Admin/requests.html
@@ -68,7 +68,7 @@
                     </div><br>
 
                     <div class="form-group">
-                        <label>คุณเคยเลี้ยงสัตว์หรือจัดองการ์ดแลรับไป? กรุณา</label>
+                        <label>คุณเคยเลี้ยงสัตว์เลี้ยงมาก่อนหรือไม่? ถ้าเคย โปรดเล่าประสบการณ์ของคุณ</label>
                         <textarea readonly>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</textarea>
                     </div><br>
 
@@ -116,14 +116,15 @@
                         </div>
                         <div class="pet-details">
                             <div class="pet-detail-item">ชื่อ SHOKUN</div>
-                            <div class="pet-detail-item">สายพันธุ์ SHIBA INU</div>
-                            <div class="pet-detail-item">โรคประจำตัว : ไม่มี</div>
-                            <div class="pet-detail-item">แอลเลอร์ยี : ยางปูนใบปลา</div>
-                            <div class="pet-detail-item">สุดรับ 1000฿</div>
-                            <div class="pet-detail-item">เพศ หญิง</div>
+                            <div class="pet-detail-item">รหัส D001</div>
+                            <div class="pet-detail-item">เพศ ชาย</div>
+                            <div class="pet-detail-item">ชนิด หมา</div>
+                            <div class="pet-detail-item">สายพันธุ์ shiba inu</div>
                             <div class="pet-detail-item">อายุ 2 ปี</div>
-                            <div class="pet-detail-item">การฉีดวัคซีน : เท่าเงิน</div>
-                            <div class="pet-detail-item">การผ่าตัดขยัน : ครบ</div>
+                            <div class="pet-detail-item">โรคประจำตัว : ไม่มี</div>
+                            <div class="pet-detail-item">การทำหมัน : ทำแล้ว</div>
+                            <div class="pet-detail-item">แพ้อาหาร : ปลาทูน่าต้มน้ำปลา</div>
+                            <div class="pet-detail-item">การฉีดวัคซีน : ครบ</div>
                         </div>
                     </div>
                 </div>
